# aredn-timelapse-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  config.aredn-example.yaml  config.camaredn.yaml  config.example.yaml  config.fenetre-main.yaml  config.goprousb.yaml  config.integration.intelnuc.yaml  config.pizero.yaml  config.sfbay.yaml  config.smaller.local.yaml  config.yaml.pi  docker-compose.ghcr.yml  docker-compose.portainer.yml  docker-compose.yaml  fenetre.service  install_fenetre_cam_pizero.sh  optimize_pizero_services.sh  pyproject.toml
.github/workflows/: build-ghcr.yml
itests/: test_server_integration.py
src/fenetre/: admin_server.py  camera_utils.py  cameras_metadata.py  compat.py  config.py  daylight.py  fenetre.py  gopro.py  gopro_utility.py  picamera.py  platform_utils.py  postprocess.py  profiler.py  timelapse.py  ui_utils.py  utils.py
src/fenetre/static/public/: list.css  list.html  list.js  timelapse.html
tests/: test_camera_utils.py  test_fenetre.py  test_fenetre_config.py  test_gopro.py  test_postprocess.py  test_ui_utils.py
