[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fenetre"
version = "1.0.0"
dependencies = [
    "pytz",
    "pyyaml",
    "absl-py",
    "numpy",
    "astral",
    "Flask",
    "requests",
    "mozjpeg-lossless-optimization",
    "paho-mqtt",
    "waitress",
    "prometheus-client",
    "scikit-image",
    "Pillow",
    "cairosvg",
    "piexif",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
]
gopro = [
    "bleak",
    "beautifulsoup4",
    "netifaces",
]
picamera2 = [
    "picamera2",
]
pyexiv2 = [
    "pyexiv2",
]

[project.scripts]
fenetre = "fenetre.compat:run"
daylight-tool = "fenetre.daylight_tool:run"
timelapse-tool = "fenetre.timelapse_tool:run"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["fenetre"]

[tool.flake8]
max-line-length = 120
ignore = "E501"

[tool.isort]
profile = "black"
line_length = 120
